test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-nonnil-unmanaged.chpl
//  lhs: unmanaged!  rhs: unmanaged!  ok

class MyClass {
  var x: int;
}

var rhs = new unmanaged MyClass();

var lhs: unmanaged MyClass = rhs;

delete rhs;
